--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     gtag('config', 'UA-123025758-1');
   </script>
 
-
   <title>Welcome</title>
   <meta charset="utf-8" />
   <meta name="description" content="Your Welcome Page" />
@@ -25,10 +24,11 @@
   <link rel="stylesheet" type="text/css" href="Welcome.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
+
 <body>
 	<div class="content">
 
-	  <h1>Good Morning!</h1>
+	  <h1 id="greeting">Good Morning!</h1>
 		  <div id="date"></div>	  	
 		  <div id="time"></div>
 
@@ -46,9 +46,9 @@
 			  <p id="quote-content"></p>
 			  <p id="quote-author"></p>
 			</section>
+			
 			<section class="col-sm-6">
 	    	<button type="button" class="btn btn-primary btn-lg" onclick="window.open('https://en.wikipedia.org/wiki/Special:Random');">Random Wikipedia Article</button>
-
 	      <form>
 	        <div class="input-group">
 	    			<input id="searchTerm"  type="text" class="form-control" placeholder="Search...">
