--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     gtag('config', 'UA-123025758-1');
   </script>
 
-  <title>Welcome</title>
+  <title>Welcome!</title>
   <meta charset="utf-8" />
-  <meta name="description" content="Your Welcome Page" />
-  <meta name="Keywords" content="Ryan Foss, Welcome" />
+  <meta name="description" content="A Welcome Page by Web Developer, Ryan Foss" />
+  <meta name="Keywords" content="Ryan Foss, Welcome, Wev Developer, Javascript Specialist" />
   <meta name="author" content="Ryan Foss" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
@@ -59,10 +59,7 @@
 	  			</div>
 	      </form>
 	      <div id="output"></div>	      
-
 			</section>	
-
-
 
 		</div>
 	</div>
