--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			
 			<section class="col-sm-6">
 	    	<button type="button" class="btn btn-primary btn-lg" onclick="window.open('https://en.wikipedia.org/wiki/Special:Random');">Random Wikipedia Article</button>
-	      <form>
+	      <form id="wikiForm">
 	        <div class="input-group">
 	    			<input id="searchTerm"  type="text" class="form-control" placeholder="Search...">
 	    			<div class="input-group-btn">
